[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Enemies/blue_circle_magic.png" type="Texture" id=1]
[ext_resource path="res://assets/Shadows/light.png" type="Texture" id=2]
[ext_resource path="res://Script/Enemies/summoner-base-blue.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 298.403

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("circle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("circle:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("circle:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CollisionShape2D:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("CollisionShape2D:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("CollisionShape2D:shape:radius")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("circle:modulate:r")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("circle:modulate:g")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("circle:modulate:b")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("circle:modulate:a")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "value"
tracks/10/path = NodePath("CollisionShape2D:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("AnimationPlayer:playback_speed")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("Light2D:texture_scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("Light2D:energy")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("Light2D:color:r")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("Light2D:color:g")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 0.647059, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/16/type = "bezier"
tracks/16/path = NodePath("Light2D:color:b")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/17/type = "bezier"
tracks/17/path = NodePath("Light2D:color:a")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/18/type = "bezier"
tracks/18/path = NodePath("SummonPos:position:x")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"points": PoolRealArray( -2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/19/type = "bezier"
tracks/19/path = NodePath("SummonPos:position:y")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"points": PoolRealArray( 210, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "active"
length = 0.7
tracks/0/type = "bezier"
tracks/0/path = NodePath("circle:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("circle:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CollisionShape2D:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CollisionShape2D:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("CollisionShape2D:shape:radius")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 295.621, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Light2D:texture_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Light2D:color:r")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Light2D:color:g")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0.647059, -0.25, 0, 0.25, 0, 0.788235, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Light2D:color:b")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Light2D:color:a")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Light2D:energy")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0, 0.7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("circle:modulate:r")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("circle:modulate:g")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("circle:modulate:b")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("circle:modulate:a")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/15/type = "method"
tracks/15/path = NodePath(".")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_desactive_summon"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "disactive"
length = 0.7
tracks/0/type = "bezier"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 6, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Light2D:color:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.4, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Light2D:color:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.788235, -0.25, 0, 0.25, 0, 0.498039, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Light2D:color:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.768627, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Light2D:color:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Light2D:energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0.7, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("CollisionShape2D:shape:radius")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 298.403, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("CollisionShape2D:scale:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("CollisionShape2D:scale:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("circle:scale:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("circle:scale:y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("circle:modulate:r")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("circle:modulate:g")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("circle:modulate:b")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("circle:modulate:a")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/15/type = "method"
tracks/15/path = NodePath(".")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_desactive_summon_finish"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 1.8
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("circle:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("circle:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 149.151, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CollisionShape2D:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("CollisionShape2D:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("circle:modulate:r")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.8 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("circle:modulate:g")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.8 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("circle:modulate:b")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.8 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("circle:modulate:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 0.317647, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.258824, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.8 )
}
tracks/9/type = "value"
tracks/9/path = NodePath("CollisionShape2D:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Light2D:texture_scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.8 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("Light2D:energy")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 1.8 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("Light2D:color:r")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.8 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("Light2D:color:g")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 0.647059, -0.25, 0, 0.25, 0, 0.647059, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.8 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("Light2D:color:b")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.8 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("Light2D:color:a")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.8 )
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("SummonPos:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SummonPos:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 210, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "random_summon"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("SummonPos:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 367.428, -0.25, 0, 0.25, 0, -403.881, -0.25, 0, 0.25, 0, 395.391, -0.25, 0, 0.25, 0, 630.005, -0.25, 0, 0.25, 0, 21.5127, -0.25, 0, 0.25, 0, -219.441, -0.25, 0, 0.25, 0, 665.535, -0.25, 0, 0.25, 0, 447.319, -0.25, 0, 0.25, 0, -507.793, -0.25, 0, 0.25, 0, -616.179, -0.25, 0, 0.25, 0, -553.061, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("SummonPos:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 515.932, -0.25, 0, 0.25, 0, -489.269, -0.25, 0, 0.25, 0, -468.33, -0.25, 0, 0.25, 0, 0.24353, -0.25, 0, 0.25, 0, 618.333, -0.25, 0, 0.25, 0, -619.787, -0.25, 0, 0.25, 0, 97.1855, -0.25, 0, 0.25, 0, 466.991, -0.25, 0, 0.25, 0, 386.097, -0.25, 0, 0.25, 0, -220.793, -0.25, 0, 0.25, 0, 286.944, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 )
}

[sub_resource type="CircleShape2D" id=8]
radius = 766.264

[node name="summoner-base-blue" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="circle" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4.2045 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 6.0
color = Color( 0.4, 0.788235, 1, 1 )
energy = 0.7

[node name="Timer" type="Timer" parent="."]

[node name="SummonPos" type="Position2D" parent="."]
position = Vector2( -2, 210 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
reset_on_save = false
anims/RESET = SubResource( 2 )
anims/active = SubResource( 3 )
anims/disactive = SubResource( 5 )
anims/idle = SubResource( 4 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "random_summon"
anims/RESET = SubResource( 6 )
anims/random_summon = SubResource( 7 )

[node name="seek_player" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="seek_player"]
shape = SubResource( 8 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="seek_player" to="." method="_on_seek_player_body_entered"]
